// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/item-details/ItemProperties should not render properties when not specified 1`] = `
<dl
  className="item-properties"
>
  <RetentionPolicy />
  <ClassificationProperty />
</dl>
`;

exports[`features/item-details/ItemProperties should pass classification props to ClassificationProperty when specified 1`] = `
<dl
  className="item-properties"
>
  <RetentionPolicy />
  <ClassificationProperty
    openModal={[Function]}
    tooltip="tooltip"
    value="value"
  />
</dl>
`;

exports[`features/item-details/ItemProperties should render editable description when onDescriptionChange is specified 1`] = `
<dl
  className="item-properties"
>
  <FormattedMessage
    defaultMessage="Description"
    id="boxui.itemDetails.description"
    tagName="dt"
  />
  <dd>
    <EditableDescription
      onDescriptionChange={[Function]}
      textAreaProps={
        Object {
          "data-resin-target": "description",
        }
      }
      value="description"
    />
  </dd>
  <RetentionPolicy />
  <ClassificationProperty />
</dl>
`;

exports[`features/item-details/ItemProperties should render editable description when onDescriptionChange is specified 2`] = `
<dl
  className="item-properties"
>
  <FormattedMessage
    defaultMessage="Description"
    id="boxui.itemDetails.description"
    tagName="dt"
  />
  <dd>
    <EditableDescription
      onDescriptionChange={[Function]}
      textAreaProps={
        Object {
          "data-resin-target": "description",
        }
      }
      value=""
    />
  </dd>
  <RetentionPolicy />
  <ClassificationProperty />
</dl>
`;

exports[`features/item-details/ItemProperties should render editable url when url and onValidURLChange are specified 1`] = `
<dl
  className="item-properties"
>
  <FormattedMessage
    defaultMessage="URL"
    id="boxui.itemDetails.url"
    tagName="dt"
  />
  <dd>
    <EditableURL
      onValidURLChange={[Function]}
      value="box.com"
    />
  </dd>
  <RetentionPolicy />
  <ClassificationProperty />
</dl>
`;

exports[`features/item-details/ItemProperties should render properties when specified 1`] = `
<dl
  className="item-properties"
>
  <FormattedMessage
    defaultMessage="Description"
    id="boxui.itemDetails.description"
    tagName="dt"
  />
  <dd>
    <ReadonlyDescription
      value="Hi
testing this link http://box.com"
    />
  </dd>
  <FormattedMessage
    defaultMessage="Owner"
    id="boxui.itemDetails.owner"
    tagName="dt"
  />
  <dd>
    Jackie Chen
  </dd>
  <FormattedMessage
    defaultMessage="Enterprise Owner"
    id="boxui.itemDetails.enterpriseOwner"
    tagName="dt"
  />
  <dd>
    David Lee
  </dd>
  <FormattedMessage
    defaultMessage="Uploader"
    id="boxui.itemDetails.uploader"
    tagName="dt"
  />
  <dd>
    Wenbo Yu
  </dd>
  <FormattedMessage
    defaultMessage="Created"
    id="boxui.itemDetails.created"
    tagName="dt"
  />
  <dd>
    <FormattedDate
      day="numeric"
      hour="numeric"
      minute="numeric"
      month="short"
      value={2012-12-12T19:04:26.000Z}
      year="numeric"
    />
  </dd>
  <FormattedMessage
    defaultMessage="Modified"
    id="boxui.itemDetails.modified"
    tagName="dt"
  />
  <dd>
    <FormattedDate
      day="numeric"
      hour="numeric"
      minute="numeric"
      month="short"
      value={2016-04-05T05:09:51.883Z}
      year="numeric"
    />
  </dd>
  <FormattedMessage
    defaultMessage="Size"
    id="boxui.itemDetails.size"
    tagName="dt"
  />
  <dd>
    3.3 KB
  </dd>
  <FormattedMessage
    defaultMessage="Deleted"
    id="boxui.itemDetails.deleted"
    tagName="dt"
  />
  <dd>
    <FormattedDate
      day="numeric"
      hour="numeric"
      minute="numeric"
      month="short"
      value={2013-02-07T18:49:34.000Z}
      year="numeric"
    />
  </dd>
  <RetentionPolicy />
  <ClassificationProperty />
</dl>
`;

exports[`features/item-details/ItemProperties should render readonly url when only url is specified 1`] = `
<dl
  className="item-properties"
>
  <FormattedMessage
    defaultMessage="URL"
    id="boxui.itemDetails.url"
    tagName="dt"
  />
  <dd>
    box.com
  </dd>
  <RetentionPolicy />
  <ClassificationProperty />
</dl>
`;
